--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@ reiser4progs/COPYING.
 This file may be modified and/or distributed without restriction. This is
 not an invitation to misrepresent the history of reiser4progs.
 
+2004-10-21
+	Make memory manager enabled by default for the libminimal.
+	The version is 1.0.2
+2004-09-22
+	Change "stand alone" to "minimal footprint".
 2004-09-14
 	Run ldconfig automatically on 'make install'.
 2004-08-24
